<resources>
    <string name="app_name">archV1</string>
    <string name="email_hint">email</string>
    <string name="name_hint">name</string>
    <string name="pass_hint">password</string>
    <string name="login_button">Login</string>
    <string name="diff_button">diff_button</string>
    <string name="logo">best4u</string>
    <string name="register">No account? Register!</string>
    <string name="request_button">Request</string>
    <string name="dummy_little_text">My text</string>
    <string name="show_more">Ver mais</string>
    <string name="show_less">Ver menos</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="dummy_text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum\n%s.</string>
    <string name="shimmerViewTag">ShimmerTag</string>
    <string name="content_description_image_album_card">Album image</string>

    <string name="album_description">Album info: Id: %1$d, UserId: %2$d, Title: %3$s</string>
    <plurals name="album_download_list">
        <item quantity="one">You have been loaded &lt;b>%1$d album&lt;/b></item>
        <item quantity="other">You have been loaded &lt;b>%1$d albuns&lt;/b></item>
    </plurals>

</resources>
